--- a/src/less/reset.less
+++ b/src/less/reset.less
@@ -5,6 +5,19 @@ code {
 white-space: inherit;
 }
 
+textarea {
+    max-width: 100%;
+}
+
+
+/*
+ * Bootstrap Resets
+-------------------------------------------------- */
+.alert, .breadcrumb {
+margin-bottom: 0px;
+}
+
+
 /*
  * Woocommerce Resets
 -------------------------------------------------- */
