--- a/src/less/style.less
+++ b/src/less/style.less
@@ -2,7 +2,7 @@
 
 @import "variable.less";
 
-/* Override Hosted Cascading Style Sheets */
+/* Override Cascading Style Sheets */
 @import "reset.less";
 
 /* Main Style Sheet */
