--- a/src/less/reset.less
+++ b/src/less/reset.less
@@ -13,12 +13,12 @@ white-space: inherit;
 }
 
 textarea {
-    max-width: 100%;
+max-width: 100%;
 }
 
 
 .alert, .breadcrumb {
-margin-bottom: 0px;
+margin-bottom:0;
 }
 
 
@@ -26,5 +26,9 @@ margin-bottom: 0px;
  * Woocommerce Resets
 -------------------------------------------------- */
 .woocommerce .woocommerce-breadcrumb, .woocommerce-page .woocommerce-breadcrumb {
-margin: 0 0 0em;
+margin:0;
+}
+
+.woocommerce form.checkout_coupon,.woocommerce form.login,.woocommerce form.register,.woocommerce-page form.checkout_coupon,.woocommerce-page form.login,.woocommerce-page form.register {
+margin:0;
 }
