Removing Table Margin

--- a/src/less/reset.less
+++ b/src/less/reset.less
@@ -32,3 +32,7 @@ margin:0;
 .woocommerce form.checkout_coupon,.woocommerce form.login,.woocommerce form.register,.woocommerce-page form.checkout_coupon,.woocommerce-page form.login,.woocommerce-page form.register {
 margin:0;
 }
+
+.woocommerce table.shop_table, .woocommerce-page table.shop_table {
+margin:0;
+}
